<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<name>Base 42</name>
	<description>This library contains all basic helpers and utilities for Studio 42s Java codes. See https://github.com/studio42gmbh/base42</description>
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.s42</groupId>
	<artifactId>base42</artifactId>
	<version>1.0.7-DEV</version>
	<packaging>jar</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>17</maven.compiler.release>
	</properties>
	<dependencies>
		<dependency>
			<!-- JSON Lib -->
			<!-- https://www.json.org/json-en.html -->
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20240303</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<!-- Emailing lib -->
			<!-- https://jakarta.ee/specifications/mail/2.0/jakarta-mail-spec-2.0 -->
			<groupId>com.sun.mail</groupId>
			<artifactId>jakarta.mail</artifactId>
			<version>2.0.1</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<!-- Testing Framework -->
			<!-- https://testng.org/ -->
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>7.10.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub studio42 GmbH Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/studio42gmbh/base42</url>
		</repository>
	</distributionManagement>
	<build>
		<plugins>
			<plugin>
				<!-- Generate version file inside of JAR -->
				<!-- https://maven.apache.org/plugins/maven-antrun-plugin/ -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<phase>generate-resources</phase>
						<configuration>
							<target>
								<exec executable="git" outputproperty="git.revision" failifexecutionfails="false" errorproperty="">
									<arg value="describe"/>
									<arg value="--tags"/>
									<arg value="--always"/>
									<arg value="--abbrev=11"/>
									<arg value="HEAD"/>
								</exec>
								<property name="versionFile" value="${project.basedir}/src/main/resources/de/s42/base/${project.artifactId}.version"/>
								<property name="fullVersion" value="${project.version} #${git.revision} ${maven.build.timestamp}"/>
								<echo file="${versionFile}">${fullVersion}</echo>
								<echo>New version is ${fullVersion}</echo>
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<!-- https://maven.apache.org/surefire/maven-surefire-plugin/examples/testng.html -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<!-- https://stackoverflow.com/questions/64688896/how-to-make-testng-print-detail-message-about-the-failure -->
					<trimStackTrace>false</trimStackTrace>
					<argLine>--add-modules de.sft.base -Dfile.encoding=UTF-8</argLine>
					<workingDirectory>${project.basedir}/data/</workingDirectory>
					<!--parallel>methods</parallel>
					<threadCount>8</threadCount>
					<dataproviderthreadcount>8</dataproviderthreadcount -->
				</configuration>
			</plugin>
			<plugin>
				<!-- https://maven.apache.org/plugins/maven-compiler-plugin/ -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<compilerArgs>
						<arg>-deprecation</arg>
						<arg>-Xlint:unchecked</arg>
					</compilerArgs>
					<showDeprecation>true</showDeprecation>
				</configuration>
			</plugin>
			<plugin>
				<!-- https://maven.apache.org/plugins/maven-dependency-plugin/ -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.7.0</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>
								${project.build.directory}/libs
							</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<!-- https://maven.apache.org/plugins/maven-jar-plugin/ -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.2</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>libs/</classpathPrefix>
						</manifest>
						<manifestEntries>
							<Automatic-Module-Name>de.sft.base</Automatic-Module-Name>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<!-- https://maven.apache.org/plugins/maven-javadoc-plugin/aggregate-mojo.html -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<outputDirectory>${project.basedir}/docs</outputDirectory>
					<reportOutputDirectory>${project.basedir}/docs</reportOutputDirectory>
					<destDir>javadoc</destDir>
					<show>private</show>
				</configuration>
			</plugin>
			<plugin>
				<!-- https://maven.apache.org/plugins/maven-install-plugin/ -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-install-plugin</artifactId>
				<version>3.1.2</version>
			</plugin>
		</plugins>
	</build>
</project>